# human-in-the-loop-ai-demo

./: .gitignore  README.md
agent-starter-python/: .env.example  ASSESSMENT_SUCCESS.md  ELEVENLABS_COMPLETE_FIX.md  ELEVENLABS_FIX.md  ELEVENLABS_TTS_FIX.py  FINAL_ANALYSIS.md  FINAL_ASSESSMENT_DEMO.py  GET_API_KEYS.md  GET_ELEVENLABS_VOICES.py  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  TEST_RESULTS.md  TTS_QUICK_FIX.md  TTS_SOLUTIONS.md  TTS_SUCCESS_SUMMARY.md  comprehensive_test.py  help_requests.db.FULLBACKUP_20251023_152848  help_requests.db.backup_20251023_140011  integration_test.py  pyproject.toml  quick_test.py  setup_test.py  test_agent_startup.py  test_improved_behavior.py  test_voice.html  verify_setup.py
agent-starter-python/src/: agent.py  agent_fallback.py  api_token.py  customer_followup.py  database.py  main.py  question_classifier.py  timeout_service.py  web_server.py
agent-starter-python/src/backend/: api.py  config.py  db.py  models.py  repositories.py  services.py
agent-starter-python/templates/: dashboard.html
agent-starter-python/tests/: test_backend_api.py
frontend/: components.json  globals.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: alert-demo.tsx  data-card-demo.tsx  field-demo.tsx  layout.tsx  page.tsx
frontend/app/voice-demo/: page.tsx
frontend/components/: FeatureCard.tsx  LiveKitVoiceClient.tsx  PhoneInterface.tsx  SupervisorAccess.tsx
frontend/components/ui/: badge.tsx  button.tsx  data-card-display.tsx  field-components.tsx  input.tsx  progress.tsx  voice-powered-orb.tsx
(+1 files in other folders)
